# BoundsCheckExplorer

./: .gitignore  GreedyRemove.py  ParseCallgrind.py  ParseCount.py  README.md  README.source.md  RemoveAfterO3Exp.py  ResultPresenter.py  SourceCorvair.py  SourceCorvair_multifile.py  all_exp.sh  brotli_final_explore.txt  callgrind_get_unchecked_parser.perl  compare_perf.sh  compile_all.sh  edgeProf.sh  exp.sh  exp_apr11.ipynb  genExp.sh  genExpO0.sh  genLifeCycle.sh  gen_and_run_regex_exp.sh  gen_regex_exp.sh  make_onebc.sh  oneGenFromSource.sh  oneGenFromSource_multifile.sh  oneRemoveAfterO3.sh  onebc.sh  prof_exp.sh  prof_transform.sh  regexify.py  remove-bc.sh  runExp.sh  run_brotli_exp.sh  run_brotli_expand_exp.sh  run_regex_exp.sh  transform.sh  upperbound_exp.sh
BenchmarkSelection/: .gitignore  GetHierarchy.py  tainted_apps.txt  tainted_apps_l1.txt  unchecked_list.txt
avoid-bench-inline/src/: CatPass.cpp
bc-life-cycle-pass/src/: CatPass.cpp  MarkBCGEP.h
benchmarks/: .gitignore  bench_skeleton.rs
benchmarks/assume_true/: Cargo.toml
benchmarks/bytecount-0.6.2/: Cargo.toml
benchmarks/crc-any-2.3.5/: .cargo_vcs_info.json  Cargo.toml
benchmarks/fancy-regex-0.4.1/: Cargo.toml
benchmarks/forpaper/: Cargo.toml
benchmarks/forpaper/benches/: bench.rs
benchmarks/forpaper/src/: lib.rs
benchmarks/geo-0.16.0/: Cargo.toml
brotli-exp/: Cargo.toml  README.md  create_silesia.sh  fn_safe.txt  silesia_gen.py
brotli-expand/: .gitignore  Cargo.toml  cal.out  cal.out-old  changes.txt  final_results.pkl
outer-loop-prof-runtime/: Makefile  OuterLoopProfRT.cpp
(+45 files in other folders)
