[package]
name = "forpaper"
version = "0.1.0"
authors = ["np <nataliepopescu@gmail.com>"]
edition = "2018"

[lib]

[[bin]]
name = "test_bc"
path = "bin/test_bc.rs"

[dependencies]
rand = "*"

[profile.bench]
debug = true

[[bench]]
name = "bench"
harness = false

[dev-dependencies.bencher]
version = "0.1.4"
